more lua debug output, luac target (using host-architecture cmake)

--- a/external_lib/lua-5.2.0/CMakeLists.txt
+++ b/external_lib/lua-5.2.0/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(lua)
 
-if(MSVC)
-else()
+if(NOT MSVC AND NOT MINGW)
 	# Enable building a shared library.
 	add_definitions("-fPIC")
 endif()
@@ -43,5 +42,22 @@ set(SOURCES
   src/linit.c
 )
 set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE CXX)
-
 add_library(lua STATIC ${SOURCES})
+
+if (NOT MINGW)
+  set_source_files_properties(src/luac.c PROPERTIES LANGUAGE CXX)
+  add_executable(luac EXCLUDE_FROM_ALL src/luac.c ${SOURCES})
+  set_target_properties(luac PROPERTIES COMPILE_FLAGS "-m32")
+  set_target_properties(luac PROPERTIES LINK_FLAGS "-m32")
+  get_property(luac_location TARGET luac PROPERTY LOCATION)
+else()
+  message("${CMAKE_BINARY_DIR}/luac")
+  set(luac_location ${CMAKE_BINARY_DIR}/luac/luac PARENT_SCOPE)
+  add_custom_target(luac
+    rm -rf ${CMAKE_BINARY_DIR}/luac &&
+    mkdir ${CMAKE_BINARY_DIR}/luac &&
+    cd ${CMAKE_BINARY_DIR}/luac &&
+    cmake ${CMAKE_CURRENT_SOURCE_DIR} &&
+    make luac
+  )
+endif()
