--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "packages/pg"]
 	path = packages/pg
-	url = https://bitbucket.org/makielski/pg_botscript.git
+	url = git@bitbucket.org:makielski/pg_botscript.git
 [submodule "packages/kv"]
 	path = packages/kv
-	url = https://bitbucket.org/makielski/kv_botscript.git
+	url = git@bitbucket.org:makielski/kv_botscript.git
 [submodule "external_lib/lua-5.2"]
 	path = external_lib/lua-5.2
 	url = git@bitbucket.org:makielski/lua.git
