target include directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,8 @@ set(bs-boost-libs boost)
 file(GLOB exe_files "src/main.cc")
 file(GLOB_RECURSE bs_files "src/*.cc")
 list(REMOVE_ITEM  bs_files ${exe_files})
-add_library(bs STATIC EXCLUDE_FROM_ALL ${bs_files})
+add_library(bs EXCLUDE_FROM_ALL ${bs_files})
+target_include_directories(bs PUBLIC src)
 if(MSVC)
   target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua)
   set(_def
