--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/pg"]
 	path = packages/pg
-	url = git@bitbucket.org:makielski/pg_botscript.git
+	url = git@github.com:makielskis/pg.git
