--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.17)
 project(botscript)
 
+find_package(Threads)
+
 include(cmake/pkg.cmake)
 
 ################################
@@ -50,6 +52,7 @@ file(GLOB_RECURSE bs_files "src/*.cc")
 list(REMOVE_ITEM  bs_files ${exe_files})
 add_library(bs EXCLUDE_FROM_ALL ${bs_files})
 target_include_directories(bs PUBLIC src)
+target_link_libraries(bs zlibstatic ssl crypto ${CMAKE_THREAD_LIBS_INIT})
 if(MSVC)
   target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua)
   set(_def
@@ -58,7 +61,7 @@ if(MSVC)
   )
   set_target_properties(bs PROPERTIES COMPILE_DEFINITIONS "${_def}")
 elseif(MINGW)
-  target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams -Wl,-Bstatic z ${bs-boost-libs} tidy pugixml lua ws2_32 mswsock)
+  target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams -Wl,-Bstatic ${bs-boost-libs} tidy pugixml lua ws2_32 mswsock)
   set_target_properties(bs PROPERTIES COMPILE_FLAGS "-std=c++11 -s")
   set(_def
     BOOST_THREAD_USE_LIB
@@ -68,7 +71,7 @@ elseif(MINGW)
   )
   set_target_properties(bs PROPERTIES COMPILE_DEFINITIONS "${_def}")
 elseif(ANDROID)
-  target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua z dl -pthread)
+  target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua dl)
   set_target_properties(bs PROPERTIES COMPILE_FLAGS "-std=c++11 -fPIC")
   set(_def ANDROID)
   set_target_properties(bs PROPERTIES COMPILE_DEFINITIONS "${_def}")
@@ -76,9 +79,9 @@ elseif(ANDROID)
 else()
   set_target_properties(bs PROPERTIES COMPILE_FLAGS "-Wall -Wextra -std=c++11")
   if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua z)
+    target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua)
   else()
-    target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua z dl -pthread)
+    target_link_libraries(bs rapidjson tidy boost-filesystem boost-regex boost-iostreams ${bs-boost-libs} tidy pugixml lua dl)
   endif()
 endif()
 
@@ -94,9 +97,9 @@ endif()
 #if(MSVC)
 #  target_link_libraries(botscript bs ${bs-boost-libs} tidy pugixml lua)
 #elseif(MINGW)
-#  target_link_libraries(botscript -Wl,-Bstatic ${bs-boost-libs} tidy pugixml lua z ws2_32 mswsock)
+#  target_link_libraries(botscript -Wl,-Bstatic ${bs-boost-libs} tidy pugixml lua ws2_32 mswsock)
 #else()
-#  target_link_libraries(botscript bs ${bs-boost-libs} tidy pugixml lua z dl -pthread)
+#  target_link_libraries(botscript bs ${bs-boost-libs} tidy pugixml lua dl -pthread)
 #endif()
 
 
@@ -112,5 +115,8 @@ target_include_directories(test-dir INTERFACE ${CMAKE_BINARY_DIR}/generated)
 
 add_executable(botscript-tests EXCLUDE_FROM_ALL test/config_test.cpp)
 set_target_properties(botscript-tests PROPERTIES COMPILE_FLAGS "-std=c++11")
-target_link_libraries(botscript-tests test-dir boost-filesystem gtest gtest_main bs ${bs-boost-libs} tidy pugixml lua z dl -pthread)
+target_link_libraries(botscript-tests test-dir boost-filesystem gtest gtest_main bs ${bs-boost-libs} tidy pugixml lua)
+if (NOT MSVC)
+  target_link_libraries(botscript-tests dl)
+endif()
 add_test(botscript-tests botscript-tests)
